# mindlakeVM

./: .gitignore  README.md  start.sh
cps-research/: Branch · 认知编译与Agent设计-编译器.md  _Doc2Skill 编译管线设计 固定的对话.md  cps-metaprompt.md  cps-skill.md
design/: claude-integration-design.md  v1-prd.md
docs/: code_review_case.md  cognitive_compilation_agent_paradigm.md  cognitive_compilation_pet_unified.md  cognitive_protocol_vs_claude_skill_multidisciplinary.md  congintion-compilation.md  developer_guide.md  fake_cli_anything_case.md  llmos_kernel_architecture_case.md  mcp_server_guide.md  mindlakevm_easkt_backlog_v1.md  use_cases.md  (+6 more)
mindlakevm/runtime/: .env.example  README.md  main.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  start.sh  store.py  tool_registry.py
mindlakevm/runtime/api/: bench.py  compile.py  run.py  skills.py  tools.py
mindlakevm/runtime/bench/: baselines.py  judges.py  runner.py  scenario_loader.py
mindlakevm/runtime/compiler/: ir_validator.py  llm.py  pipeline.py  tool_export.py
mindlakevm/runtime/executor/: agent_runner.py  guardrail.py  runner.py  tool_adapter.py  tracer.py  verifier.py
mindlakevm/runtime/skills/: .compile_cache.json  ops-sev1-incident-response.json
mindlakevm/runtime/skills/ops-sev1-incident-response/: SKILL.md
mindlakevm/runtime/skills/ops-sev1-incident-response/references/: ESCALATION_MATRIX.md
mindlakevm/runtime/tests/: test_claude_integration.py  test_e2e_code_review_flow.sh  test_e2e_fake_cli_anything_flow.sh  test_e2e_tool_pipeline.sh
mindlakevm/runtime/tool_registry/: bindings.json  tools.json
(+51 files in other folders)
